--- a/client/src/Pages/Auth/Auth.css
+++ b/client/src/Pages/Auth/Auth.css
@@ -48,13 +48,6 @@
     margin-top:50px;
     margin-bottom:20px;
 }
-#Detail a{
-    display:block;
-    text-align: left;
-    width:100%;
-    color:rgb(36, 36, 250);
-    text-decoration: none;
-}
 #Detail input{
     margin-top:15px;
     width:100%;
@@ -70,4 +63,13 @@
     border:0px;
     background-color:rgb(5, 147, 121);
     font-size:18px;
+    color:white;
+}
+
+#Detail a{
+    display:block;
+    text-align: left;
+    width:100%;
+    color:rgb(36, 36, 250);
+    text-decoration: none;
 }
