--- a/client/src/Pages/ContactUs/ContactUs.css
+++ b/client/src/Pages/ContactUs/ContactUs.css
@@ -1,7 +1,7 @@
 .contact-info-div::before {
   content: "";
   position: absolute;
-  background: url("../images/contactusimg.jpg") no-repeat center center/cover;
+  background: url("../../images/contactusimg.jpg") no-repeat center center/cover;
   height: 381px;
   top: 0px;
   left: 0px;
