--- a/client/src/Pages/DB/db.css
+++ b/client/src/Pages/DB/db.css
@@ -1,73 +1,44 @@
-.db-container {
-  display: flex;
-  flex-direction: row;
-  margin:10px auto;
-  height: 97vh;
-  width: 90%;
-  border: 1px solid brown;
-}
-.db-sidebar-section {
-  display: flex;
-  flex-direction: column;
-  border: 1px solid brown;
-  background-color: rgb(5, 147, 121);
-  width: 25%;
-}
-.db-sidebar-section img {
-  margin:5px auto;
-}
-.search-icon {
-  display: flex;
-  margin-top: 22px;
-  padding:auto;
-  justify-content: center;
-}
-.input-Box {
-  height: 35px;
-  padding:5px;
-  width: 80%;
-  border: 1px solid brown;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-  outline: none;
-}
-.icons {
-  font-size: 35px;
-  color: white;
-  background-color: brown;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-}
-.database-section {
-  display: flex;
-  flex-direction: column;
-  border: 1px solid green;
-  width: 75%;
+#MAIN_DIV{
+    margin-left:50px;
 }
 
-.detail-member-btn {
-  display: flex;
-  flex-direction: row;
-  padding:10px;
+nav {
+    background-color: #f1f1f1;
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+
 }
-
-.detail-member-btn button{
-  height: 38px;
-  width: 71px;
-  margin-right:10px;
-  background-color: rgb(5, 147, 121);
-  border: none;
-  color: white;
-  border-radius: 5px;
-  font-size: 16px;
+  
+.navbar-left a {
+  text-decoration: none;
+  color: #333;
 }
-
-
-.db-section1 {
-  display: flex;
-  flex-direction: column;
-  border: 1px solid green;
-  height:100%;
-  padding:5px 10px;
+  
+.navbar-right form {
+    display: flex;
+    align-items: center;
 }
-
+  
+.navbar-right input[type="text"] {
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+  
+.navbar-right button {
+    margin-left: 10px;
+    padding: 5px 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+  
+.navbar-right button:hover {
+    background-color: #45a049;
+}
+  
